--- a/requirements.txt
+++ b/requirements.txt
@@ -13,16 +13,17 @@ click-repl==0.3.0
 cron-descriptor==1.4.3
 Django==4.2.14
 django-celery-beat==2.6.0
-django-extensions==3.2.3
 django-timezone-field==7.0
 djangorestframework==3.15.2
+dnspython==2.6.1
+eventlet==0.36.1
+greenlet==3.0.3
 idna==3.7
 kombu==5.3.7
 numpy==1.24.4
 pandas==2.0.3
 pillow==10.4.0
 prompt_toolkit==3.0.47
-pygraphviz==1.11
 python-crontab==3.2.0
 python-dateutil==2.9.0.post0
 pytz==2024.1
